--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 
-<body class="h-screen flex flex-col items-center justify-center">
+<body class="py-32 2xl:py-0 2xl:h-screen flex flex-col items-center justify-center">
     <div class="-translate-y-9 flex flex-col items-center gap-14">
     <h1 class="text-6xl text-blue-700 font-bold">Etchy-a-Sketchy</h1>
     <div class="flex flex-row gap-8 items-start">
@@ -19,7 +19,7 @@
             <div class="bg-slate-50 w-full rounded-md items-center justify-center relative flex pt-11 pb-10">
                 <p class="text-sm text-slate-500 absolute left-4 top-3">Color</p>
                 
-                <input class="w-auto h-auto relative border-none m-0 p-0 cursor-pointer appearance-none hover:scale-105 transition-all bg-transparent" type="color">
+                <input class="w-auto h-auto relative border-none m-0 p-0 cursor-pointer appearance-none hover:scale-110 transition-all bg-transparent" type="color">
             
             </div>
 
@@ -33,7 +33,7 @@
 
             <div class="bg-slate-50 w-full rounded-md items-center justify-center relative flex flex-col gap-2 px-5 pt-12 pb-6">
                 <p class="text-sm text-slate-500 absolute left-4 top-3">Grid Size</p>
-                <p class="text-base text-slate-700 text-center">24 x 24</p>
+                <p id="dimensions" class="text-base text-slate-700 text-center">24 x 24</p>
                 <input id="dimension-selector" type="range" min="1" max="60" value="12">
             </div>
 
