--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
             <div class="bg-slate-50 w-full rounded-md items-center justify-center relative flex pt-11 pb-10">
                 <p class="text-sm text-slate-500 absolute left-4 top-3">Color</p>
                 
-                <input class="w-auto h-auto relative border-none m-0 p-0 cursor-pointer appearance-none hover:scale-110 transition-all bg-transparent" type="color">
+                <input id="color-input" class="w-auto h-auto relative border-none m-0 p-0 cursor-pointer appearance-none hover:scale-110 transition-all bg-transparent" type="color">
             
             </div>
 
-            <div class="bg-slate-50 w-full rounded-md items-center justify-center relative flex flex-col gap-2 px-4 pt-12 pb-6">
+            <div id="brush-mode-controls" class="bg-slate-50 w-full rounded-md items-center justify-center relative flex flex-col gap-2 px-4 pt-12 pb-6">
                 <p class="text-sm text-slate-500 absolute left-4 top-3">Mode</p>
-                <button class="w-full rounded-md border border-slate-200 text-base text-slate-600 py-3 bg-slate-50 hover:bg-slate-300 transition-all">Normal</button>
-                <button class="w-full rounded-md border border-slate-200 text-base text-slate-600 py-3 bg-slate-50 hover:bg-slate-300 transition-all">Rainbow</button>
-                <button class="w-full rounded-md border border-slate-200 text-base text-slate-600 py-3 bg-slate-50 hover:bg-slate-300 transition-all">Gradient</button>
-                <button class="w-full rounded-md border border-slate-200 text-base text-slate-600 py-3 bg-slate-50 hover:bg-slate-300 transition-all">Eraser</button>
+                <button id="normal" class="w-full rounded-md border border-slate-200 text-base text-slate-600 py-3 bg-slate-50 hover:bg-slate-200 transition-all !bg-slate-900 !text-slate-50">Normal</button>
+                <button id="rainbow" class="w-full rounded-md border border-slate-200 text-base text-slate-600 py-3 bg-slate-50 hover:bg-slate-200 transition-all">Rainbow</button>
+                <button id="gradient" class="w-full rounded-md border border-slate-200 text-base text-slate-600 py-3 bg-slate-50 hover:bg-slate-200 transition-all">Gradient</button>
+                <button id="eraser" class="w-full rounded-md border border-slate-200 text-base text-slate-600 py-3 bg-slate-50 hover:bg-slate-200 transition-all">Eraser</button>
             </div>
 
             <div class="bg-slate-50 w-full rounded-md items-center justify-center relative flex flex-col gap-2 px-5 pt-12 pb-6">
@@ -37,7 +37,7 @@
                 <input id="dimension-selector" type="range" min="1" max="60" value="12">
             </div>
 
-            <button class="w-full bg-blue-500 hover:bg-blue-600 transition-all text-slate-50 text-base py-3 rounded">Clear</button>
+            <button id="clear-button" class="w-full bg-blue-500 hover:bg-blue-600 transition-all text-slate-50 text-base py-3 rounded">Clear</button>
 
             </div>
 
